---
source: tests/golden_tests.rs
input_file: tests/golden_tests/mutual_recursion/len.hvm
---
@Len = ({2 @a {2 #0 a}} a)
@List.cons = (a (b {2 {2 a {2 b c}} {2 * c}}))
@List.nil = {2 * {2 a a}}
@a = {2 * @b}
@b = {2 a b}
& #1 ~ <+ c b>
& @Len ~ (a c)
@main = a
& @Len ~ (b a)
& @List.cons ~ (* (c b))
& @List.cons ~ (* (d c))
& @List.cons ~ (* (e d))
& @List.cons ~ (* (f e))
& @List.cons ~ (* (g f))
& @List.cons ~ (* (@List.nil g))
